monitoring/prod/pushgateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pushgateway
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: pushgateway.home.t12.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pushgateway
                port:
                  number: 9091
